src/test/deca/test_compilateur/syntax/invalid/created/class/bad_new_ident2.deca
// Description :
//    new sur autre chose qu'un ident
//
// Resultats :
//		Syntaxe error

{
new null();
}